--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,108 +10,70 @@
     background-color: rgb(31, 125, 83);
 }
 
-/* .bg1 {
-    background: linear-gradient(to right, rgb(14, 54, 21), rgb(38, 123, 131));
-} */
+
 .bg0 {
-    background-image: url('bg0.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(84, 177, 84);
+
 }
 .bg1 {
-    background-image: url('bg1.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: indigo;
+
 }
 .bg2 {
-    background-image: url('bg2.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(7, 15, 14);
+
 }
 .bg3 {
-    background-image: url('bg3.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(29, 87, 211);
+
 }
 .bg4 {
-    background-image: url('bg4.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(140, 53, 197);
+
 }
 .bg5 {
-    background-image: url('bg5.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(6, 201, 168);
+
 }
 .bg6 {
-    background-image: url('bg6.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(236, 236, 236);
+
 }
 
 .bg7 {
-    background-image: url('bg7.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(207, 226, 223);
 }
 .bg8 {
-    background-image: url('bg8.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(6, 201, 168);
+
 }
 .bg9 {
-    background-image: url('bg9.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(6, 201, 168);
+
 }
 
 .bg10 {
-    background-image: url('bg10.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(221, 95, 22);
+
 }
 
 .bg11 {
-    background-image: url('bg11.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(104, 184, 80);
 }
 .bg12 {
-    background-image: url('bg12.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(63, 163, 194);
 }
 .bg13 {
-    background-image: url('bg13.png');
-    background-repeat: no-repeat;
-    background-size: cover; /* or 'contain' depending on your needs */
-    background-position: center;
+    background-color: rgb(204, 134, 54);
 }
 .text_dark{
     color: rgb(15, 15, 15);
 }
-/* .text_dark:hover{
-    color: rgb(11, 46, 122);
-} */
 
 .text_light{
     color: rgb(233, 230, 230);
 }
 
-/* .text_light:hover{
-    color: rgb(236, 99, 25);
 
-} */
+
+
