--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,7 +15,7 @@
 
 
 .bg0 {
-    background-color: rgb(84, 177, 84);
+    background-color: rgb(145, 193, 199);
 
 }
 .bg1 {
@@ -36,7 +39,7 @@
 
 }
 .bg6 {
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(145, 193, 199);
 
 }
 
